# AMSC

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  reference.md  test_graph.py  test_memsearch.py
agent/: graph.py  state.py  tools.py
data/: knowledge_base.json  mock_conversations.json
memory/: amem_adapter.py  base.py  langmem_adapter.py  mem0_adapter.py  memgpt_adapter.py  memsearch_adapter.py
notes/: Langmem_2.md  agent_design.md  eval.md  langmem_and_mem0_integration.md  langmem_detail.md  mem0_detail.md  memgpt_design.md  memory_framework_comparison.md  reference.md
rag/: indexer.py  retriever.py
scripts/: chat_loop.py  inspect_memory.py
tests/: test_amem.py  test_langmem.py  test_mem0.py  test_memgpt.py
